--- a/main/resources/view/login.fxml
+++ b/main/resources/view/login.fxml
@@ -12,17 +12,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="342.0" prefWidth="938.0" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
+<AnchorPane prefHeight="327.0" prefWidth="959.0" style="-fx-background-color: #192a56;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
 
    <children>
-      <ImageView fitHeight="390.0" fitWidth="524.0" layoutX="485.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="342.0" fitWidth="490.0" layoutX="475.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/smiling-business-team-standing-conference-room.jpg" />
+            <Image url="@../image/successful-employee%20(1).jpg" />
          </image>
       </ImageView>
 
 
-      <VBox alignment="CENTER" layoutX="7.0" layoutY="20.0" prefHeight="302.0" prefWidth="458.0" spacing="15.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="540.0" AnchorPane.topAnchor="20.0">
+      <VBox alignment="CENTER" layoutX="14.0" layoutY="10.0" prefHeight="304.0" prefWidth="458.0" spacing="15.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="499.0" AnchorPane.topAnchor="10.0">
 
          <effect>
             <DropShadow color="#00000055" radius="10.0" />
@@ -43,7 +43,10 @@
          <TextField fx:id="txtUsername" maxWidth="250.0" promptText="Username" />
          <PasswordField fx:id="txtPassword" maxWidth="250.0" promptText="Password" />
 
-         <Button fx:id="btnLogin" onAction="#loginOnAction" prefWidth="250.0" style="-fx-background-color: #38ef7d; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" />
+         <Button fx:id="btnLogin" onAction="#loginOnAction" prefWidth="250.0" style="-fx-background-color: #0652DD; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font></Button>
 
          <Label fx:id="lblError" textFill="red" visible="false" />
 
