--- a/main/resources/view/Dashboard.fxml
+++ b/main/resources/view/Dashboard.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -12,7 +13,7 @@
 <AnchorPane prefHeight="478.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DashboardController">
    <children>
 
-      <VBox layoutY="53.333333333333336" prefHeight="722.0" prefWidth="240.0" spacing="10" style="-fx-padding: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="53.0">
+      <VBox layoutY="76.0" prefHeight="773.0" prefWidth="240.0" spacing="10" style="-fx-padding: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="53.0">
          <children>
             <Button fx:id="btnEmployee" onAction="#employeeOnAction" prefHeight="19.0" prefWidth="148.0" style="-fx-background-color: #f5f6fa;" text="Employee" textFill="#273c75">
                <font>
@@ -92,6 +93,18 @@
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin></Button>
+            <Button fx:id="calId" mnemonicParsing="false" onAction="#calOnAction" prefHeight="42.0" prefWidth="90.0" style="-fx-background-color: #f5f6fa;">
+               <graphic>
+                  <ImageView fitHeight="44.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/icons8-calculator-48.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </Button>
             <Button fx:id="btnSetting" mnemonicParsing="false" onAction="#settingOnAction" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #f5f6fa;" text=" Setting">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -105,11 +118,11 @@
       </VBox>
 
 
-      <AnchorPane fx:id="contentPane" layoutX="201.33333333333334" prefHeight="657.0" prefWidth="489.0" style="-fx-background-color: #ecf0f1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="contentPane" layoutX="206.0" prefHeight="775.0" prefWidth="484.0" style="-fx-background-color: #ecf0f1;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="206.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane fx:id="ancpanal" layoutY="101.0" prefHeight="657.0" prefWidth="490.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children></AnchorPane>
-      <Label layoutY="14.0" prefHeight="29.0" prefWidth="174.0" style="-fx-background-color: #00d2d3;" text="Green Polyee Loop" textFill="#1c076e">
+      <Label layoutX="28.0" layoutY="4.0" prefHeight="29.0" prefWidth="169.0" style="-fx-background-color: #273c75;" text="Green Polyee Loop" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -125,5 +138,10 @@
             <Font name="System Bold Italic" size="13.0" />
          </font>
       </Label>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="4.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
