--- a/main/resources/view/Leaves.fxml
+++ b/main/resources/view/Leaves.fxml
@@ -14,101 +14,84 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="656.0" prefWidth="1103.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LeavesController">
+<AnchorPane prefHeight="656.0" prefWidth="1180.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LeavesController">
 
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="10.0" prefHeight="636.0" prefWidth="1081.0" spacing="20">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="10.0" prefHeight="636.0" prefWidth="1151.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Leave Management" textFill="WHITE" />
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="Leave Management" textFill="#0c2461">
+            <padding>
+               <Insets right="500.0" />
+            </padding></Label>
 
-
-            <GridPane hgap="10" vgap="15">
+            <GridPane hgap="5.0" prefHeight="100.0" prefWidth="300.0" vgap="5.0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" />
-                    <ColumnConstraints prefWidth="300" />
+                    <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
+                    <ColumnConstraints prefWidth="300.0" />
+               <ColumnConstraints prefWidth="100.0" />
+               <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
-                <Label text="Leave ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="74.0" text="Leave ID:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label text="Employee ID:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label text="Status:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label prefHeight="17.0" prefWidth="73.0" text="Leave Type:" textFill="black" GridPane.rowIndex="6">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label prefHeight="17.0" prefWidth="73.0" text="Start Date:" textFill="black" GridPane.rowIndex="4">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label text="End Date:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
 
-                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="lblLeaveId" text="1" textFill="black" GridPane.columnIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
 
-                <Label text="Status:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <TextField fx:id="txtEmployeeId" promptText="eg:E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtStatus" promptText="Approved/Pending/Rejected" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                <TextField fx:id="txtLeaveType" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                <TextField fx:id="txtStartDate" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="txtEndDate" promptText="yyyy-mm-dd" GridPane.columnIndex="3" GridPane.rowIndex="4" />
 
-                <Label text="Leave Type:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-
-                <Label text="Start Date:" textFill="WHITE" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-
-                <Label text="End Date:" textFill="WHITE" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-            <Label fx:id="lblLeaveId" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txtEndDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="txtStartDate" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="txtLeaveType" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="txtStatus" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <rowConstraints>
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
                <RowConstraints />
                <RowConstraints />
                <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                </rowConstraints>
             </GridPane>
 
-
-            <HBox alignment="CENTER" prefHeight="35.0" prefWidth="941.0" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #6c5ce7; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
 
-
-            <TableView fx:id="tblLeaves" onMouseClicked="#onClickTable" prefHeight="259.0" prefWidth="972.0">
+            <TableView fx:id="tblLeaves" onMouseClicked="#onClickTable" prefHeight="348.0" prefWidth="1041.0">
                 <columns>
                     <TableColumn fx:id="colLeaveId" prefWidth="100" text="Leave ID" />
                     <TableColumn fx:id="colEmployeeId" prefWidth="100" text="Employee ID" />
-                    <TableColumn fx:id="colStatus" prefWidth="196.00001525878906" text="Status" />
-                    <TableColumn fx:id="colLeaveType" prefWidth="207.99990844726562" text="Leave Type" />
-                    <TableColumn fx:id="colStartDate" prefWidth="160.6666259765625" text="Start Date" />
-                    <TableColumn fx:id="colEndDate" prefWidth="180.66668701171875" text="End Date" />
+                    <TableColumn fx:id="colStatus" prefWidth="196.0" text="Status" />
+                    <TableColumn fx:id="colLeaveType" prefWidth="318.0000305175781" text="Leave Type" />
+                    <TableColumn fx:id="colStartDate" prefWidth="201.99993896484375" text="Start Date" />
+                    <TableColumn fx:id="colEndDate" prefWidth="195.333251953125" text="End Date" />
                 </columns>
             </TableView>
         </VBox>
