--- a/main/resources/view/Positions.fxml
+++ b/main/resources/view/Positions.fxml
@@ -12,84 +12,61 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="612.0" prefWidth="1178.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.PositionsController">
+<AnchorPane prefHeight="631.0" prefWidth="1178.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.PositionsController">
 
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="579.0" prefWidth="1145.0" spacing="20">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="605.0" prefWidth="1145.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Manage Positions" textFill="WHITE">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font></Label>
+            <!-- Title -->
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="Manage Positions" textFill="#0d2667">
+            <VBox.margin>
+               <Insets right="600.0" />
+            </VBox.margin></Label>
 
-
+            <!-- Input Fields Grid -->
             <GridPane hgap="10" vgap="15">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" />
                     <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="Position ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                </rowConstraints>
 
-                <Label text="Position Title:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtPositionTitle" prefHeight="25.0" prefWidth="397.0" promptText="eg:Collection Assistant" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label prefHeight="17.0" prefWidth="82.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Position ID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label fx:id="lblPosition" style="-fx-text-fill: black; -fx-font-weight: bold;" text="1" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Salary Grade:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="83.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Position Title:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="txtPositionTitle" prefHeight="25.0" prefWidth="397.0" promptText="e.g. Collection Assistant" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                <Label prefHeight="17.0" prefWidth="84.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="Salary Grade:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                 <TextField fx:id="txtSalaryGrade" promptText="e.g. Grade A" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="lblPosition" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <rowConstraints>
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
             </GridPane>
 
-
+            <!-- Button Panel -->
             <HBox alignment="CENTER" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-font-weight: bold; -fx-text-fill: white;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-font-weight: bold; -fx-text-fill: white;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-font-weight: bold; -fx-text-fill: white;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #6c5ce7; -fx-font-weight: bold; -fx-text-fill: white;" text="Reset" />
             </HBox>
 
-
-            <TableView fx:id="tblPositions" onMouseClicked="#onClickTable" prefHeight="325.0" prefWidth="759.0">
+            <!-- Table -->
+            <TableView fx:id="tblPositions" onMouseClicked="#onClickTable" prefHeight="358.0" prefWidth="1105.0">
                 <columns>
-                    <TableColumn fx:id="colPositionId" prefWidth="154.66668319702148" text="Position ID" />
-                    <TableColumn fx:id="colPositionTitle" prefWidth="343.99998474121094" text="Position Title" />
-                    <TableColumn fx:id="colSalaryGrade" prefWidth="310.0" text="Salary Grade" />
+                    <TableColumn fx:id="colPositionId" prefWidth="154.66" text="Position ID" />
+                    <TableColumn fx:id="colPositionTitle" prefWidth="519.3333740234375" text="Position Title" />
+                    <TableColumn fx:id="colSalaryGrade" prefWidth="431.333251953125" text="Salary Grade" />
                 </columns>
             </TableView>
+
         </VBox>
     </children>
 </AnchorPane>
