--- a/main/resources/view/Task.fxml
+++ b/main/resources/view/Task.fxml
@@ -14,95 +14,82 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="602.0" prefWidth="1176.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.TaskController">
+<AnchorPane prefHeight="602.0" prefWidth="1198.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.TaskController">
 
     <children>
-        <VBox layoutX="20.0" layoutY="20.0" prefHeight="582.0" prefWidth="1138.0" spacing="20">
+        <VBox layoutX="20.0" layoutY="20.0" prefHeight="582.0" prefWidth="1198.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Task Management" textFill="WHITE" />
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Task Management" textFill="#0c2669">
+            <VBox.margin>
+               <Insets left="100.0" />
+            </VBox.margin></Label>
 
-
-            <GridPane hgap="10" vgap="12">
+            <GridPane hgap="10.0" prefHeight="100.0" prefWidth="100.0" vgap="7.0">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" />
-                    <ColumnConstraints prefWidth="300" />
+                    <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
+                    <ColumnConstraints prefWidth="300.0" />
+               <ColumnConstraints prefWidth="100.0" />
+               <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
-                <Label text="Task ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="68.0" text="Task ID:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <Label fx:id="lblTaskId" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
 
-                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtEmployeeId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label text="Employee ID:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtEmployeeId" prefHeight="25.0" prefWidth="333.0" promptText="E001" GridPane.columnIndex="3" GridPane.rowIndex="1" />
 
-                <Label text="Description:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtDescription" promptText="Task details" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label text="Description:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtDescription" prefHeight="25.0" prefWidth="349.0" promptText="Task details" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 
-                <Label text="Deadline:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                <Label prefHeight="17.0" prefWidth="67.0" text="Deadline:" textFill="black" GridPane.rowIndex="1">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtDeadline" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Status:" textFill="WHITE" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-            <TextField fx:id="txtStatus" promptText="complete/pending..." GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="txtDeadline" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label fx:id="lblTaskId" text="1" textFill="WHITE" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <rowConstraints>
+                <Label prefHeight="17.0" prefWidth="67.0" text="Status:" textFill="black" GridPane.rowIndex="3">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+                <TextField fx:id="txtStatus" promptText="complete / pending" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
+                    <RowConstraints />
                <RowConstraints />
                <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-               <RowConstraints />
-            </rowConstraints>
+                </rowConstraints>
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
             </GridPane>
 
-
-            <HBox alignment="CENTER" spacing="15">
-                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
+            <HBox alignment="CENTER" prefHeight="37.0" prefWidth="1098.0" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #6c5ce7; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
 
-
-            <TableView fx:id="tblTask" onMouseClicked="#onClickTable" prefHeight="250" prefWidth="750">
+            <TableView fx:id="tblTask" onMouseClicked="#onClickTable" prefHeight="321.0" prefWidth="1158.0">
                 <columns>
-                    <TableColumn fx:id="colTaskId" prefWidth="166.00000381469727" text="Task ID" />
-                    <TableColumn fx:id="colEmployeeId" prefWidth="184.0000457763672" text="Employee ID" />
-                    <TableColumn fx:id="colDescription" prefWidth="326.6667175292969" text="Description" />
-                    <TableColumn fx:id="colDeadline" prefWidth="218.6666259765625" text="Deadline" />
-                    <TableColumn fx:id="colStatus" prefWidth="202.00006103515625" text="Status" />
+                    <TableColumn fx:id="colTaskId" prefWidth="150" text="Task ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="150" text="Employee ID" />
+                    <TableColumn fx:id="colDescription" prefWidth="300" text="Description" />
+                    <TableColumn fx:id="colDeadline" prefWidth="150" text="Deadline" />
+                    <TableColumn fx:id="colStatus" prefWidth="150" text="Status" />
                 </columns>
             </TableView>
         </VBox>
