--- a/main/resources/view/login.fxml
+++ b/main/resources/view/login.fxml
@@ -27,23 +27,28 @@
          <effect>
             <DropShadow color="#00000055" radius="10.0" />
          </effect>
+         <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
+         </ImageView>
 
          <Label text="Welcome Back">
             <font>
-               <Font size="18.0" />
+               <Font name="System Bold" size="20.0" />
             </font>
          </Label>
 
          <Label text="Login to your account" textFill="#333">
             <font>
-               <Font size="14.0" />
+               <Font name="System Bold Italic" size="14.0" />
             </font>
          </Label>
 
          <TextField fx:id="txtUsername" maxWidth="250.0" promptText="Username" />
          <PasswordField fx:id="txtPassword" maxWidth="250.0" promptText="Password" />
 
-         <Button fx:id="btnLogin" onAction="#loginOnAction" prefWidth="250.0" style="-fx-background-color: #0652DD; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" textFill="WHITE">
+         <Button fx:id="btnLogin" onAction="#loginOnAction" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #0652DD; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" textFill="WHITE">
             <font>
                <Font name="System Bold" size="14.0" />
             </font></Button>
